crates/aura-guards/tests/boundaries/guard_operation_id_raw_from.stderr
error[E0308]: mismatched types
 --> tests/boundaries/guard_operation_id_raw_from.rs:4:45
  |
4 |     let _operation = GuardOperationId::from("");
  |                      ---------------------- ^^ expected `GuardOperationId`, found `&str`
  |                      |
  |                      arguments to this function are incorrect
  |
note: associated function defined here
 --> $RUST/core/src/convert/mod.rs
  |
  |     fn from(value: T) -> Self;
  |        ^^^^
